# mobilecoin

./: mob  start-testnet-client.sh
api/proto/: external.proto
api/src/convert/: mod.rs  outputs_and_shared_secrets.rs  serializable_input_credentials.rs
mobilecoind-json/src/: data_types.rs
mobilecoind/api/proto/: mobilecoind_api.proto
mobilecoind/src/: monitor_store.rs  payments.rs  service.rs  sync.rs
transaction/core/src/: tx.rs
transaction/core/src/ring_signature/: rct_bulletproofs.rs
transaction/std/: Cargo.toml  wasm-build.sh
transaction/std/src/: lib.rs  transaction_builder.rs
transaction/std/src/wasm/: mod.rs
transaction/std/src/wasm/data_types/: mod.rs
