[package]
name = "mc-transaction-std"
version = "1.1.0"
authors = ["MobileCoin"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# External dependencies
failure = "0.1.8"
prost = { version = "0.6.1", default-features = false, features = ["prost-derive"] }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = "1"

# MobileCoin dependencies
mc-account-keys = { path = "../../account-keys" }
mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
mc-util-serial = { path = "../../util/serial" }
mc-transaction-core = { path = "../../transaction/core"}
mc-util-from-random = { path = "../../util/from-random" }
mc-fog-report-validation = { path = "../../fog/report/validation" }

[target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
curve25519-dalek = { version = "4.0.0-pre.0", default-features = false, features = ["simd_backend", "nightly"] }
blake2 = { version = "0.9", default-features = false, features = ["simd"] }

[target.'cfg(not(any(target_feature = "avx2", target_feature = "avx")))'.dependencies]
curve25519-dalek = { version = "4.0.0-pre.0", default-features = false, features = ["nightly", "u64_backend"] }
blake2 = { version = "0.9", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.7", features =["wasm-bindgen"] }
hex = "0.4"
wasm-bindgen = { version = "=0.2.69", features = ["serde-serialize"] }
serde = "1.0"
serde_derive = "1.0"
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.61"
protobuf = "2.12"
mc-api = { path = "../../api" }

[dev-dependencies]
maplit = "1.0"
yaml-rust = "0.4"

mc-fog-report-validation-test-utils = { path = "../../fog/report/validation/test-utils" }
mc-util-test-helper = { path = "../../util/test-helper" }
